<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FragmentRegister"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/light_beige">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_trainhero"
        android:fontFamily="@font/ausa"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="44sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_register"
            android:hint="@string/enter_name"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/id_card_24px"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_register"
            android:hint="@string/enter_email_txt"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/alternate_email_24px"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_register"
            android:hint="@string/enter_password_txt"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/password_24px"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/password_24px"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_register"
            android:hint="@string/enter_phone_number"
            android:inputType="phone|number"
            android:drawableEnd="@drawable/call_24px"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonFromRegFragToLoginFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/Terracotta_red"
        android:layout_marginTop="30dp"
        android:drawableEnd="@drawable/send_24px"
        android:drawableTint="@color/white"/>
</LinearLayout>