<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".fragments.DetailedExerciseFragment"
    android:background="@color/light_beige">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="50dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_sheet">

        <ImageView
            android:id="@+id/exe_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/exercise_gif"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/card_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/exe_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="24sp"
                android:fontFamily="@font/ausa"
                android:textStyle="bold"
                android:textColor="@color/soft_gray"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/exe_body_part"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/body_part"
                android:drawablePadding="5dp" />

            <TextView
                android:id="@+id/exe_equipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/equipment"
                android:fontFamily="@font/montserrat"
                android:drawablePadding="5dp" />

            <TextView
                android:id="@+id/exe_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/muscle_target"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:id="@+id/exe_secondary_muscles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/secondary_muscles_group"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:id="@+id/instructions_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/instructions"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:id="@+id/exe_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>