<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:ignore="ScrollViewCount"
    tools:context=".fragments.HomePageFragment"
    android:fitsSystemWindows="true"
    android:background="@color/light_beige">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/app_logo"
            android:paddingHorizontal="10dp"/>

        <TextView
            android:id="@+id/greetingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_user"
            android:textSize="18sp"
            android:textColor="@color/soft_gray"
            android:textStyle="bold"
            android:fontFamily="@font/ausa"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:spacing="12dp"
            app:columnCount="2"
            app:rowCount="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/exploreCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="16dp"
                app:layout_rowWeight="2"
                app:layout_columnWeight="2"
                app:strokeWidth="2dp"
                app:strokeColor="@color/muted_teal"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/azure">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/explore_icon"
                        android:src="@drawable/explore_24px"
                        app:tint="@color/Terracotta_red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/explore_exercises_txt"
                        android:textColor="@color/soft_gray"
                        android:fontFamily="@font/montserrat"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/favoritesCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="16dp"
                app:layout_columnWeight="2"
                app:layout_rowWeight="2"
                app:strokeWidth="2dp"
                app:strokeColor="@color/muted_teal"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/azure">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/fav_icon"
                        android:src="@drawable/favorite_24px"
                        app:tint="@color/Terracotta_red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/favorite_exercises"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/soft_gray"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/nearByCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="16dp"
                app:layout_rowWeight="2"
                app:layout_columnWeight="2"
                app:strokeWidth="2dp"
                app:strokeColor="@color/muted_teal"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/azure">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/nearby_icon"
                        android:src="@drawable/explore_nearby_24px"
                        app:tint="@color/Terracotta_red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/gyms_nearby_txt"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/soft_gray"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/equipmentCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="16dp"
                app:layout_rowWeight="2"
                app:layout_columnWeight="2"
                app:strokeWidth="2dp"
                app:strokeColor="@color/muted_teal"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/azure">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/dumbbell_icon"
                        android:src="@drawable/exercise_24px"
                        app:tint="@color/Terracotta_red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/get_exercises_by_equipment_txt"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/soft_gray"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>